[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ceph-nvmeof"
dynamic = ["version"]
description = "Service to provide Ceph storage over NVMe-oF protocol"
readme = "README.md"
requires-python = "~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Anita Shekar",   email = "anita.shekar@ibm.com"},
  {name = "Sandy Kaur",     email = "sandy.kaur@ibm.com"},
  {name = "Sanjeev Gupta",  email = "guptsanj@us.ibm.com"},
  {name = "Ernesto Puerta", email = "epuertat@redhat.com"},
]
keywords = []
classifiers = [] # https://pypi.org/classifiers/
dependencies = [
    "grpcio == 1.51.3",
    "grpcio_tools == 1.51.3",
    "pytest>=7.3.1",
]

[tool.pdm.scripts]
protoc = {call = "grpc_tools.command:build_package_protos('control/proto')"}
post_install = {composite = ["protoc"]}

[project.urls]
#homepage = ""
# documentation = ""
repository = "https://github.com/ceph/ceph-nvmeof.git"
# changelog = ""
