[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ceph-nvmeof"
version = "0.0.2"
description = "Service to provide Ceph storage over NVMe-oF protocol"
readme = "README.md"
requires-python = "~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ilya Dryomov",   email = "idryomov@gmail.com"},
  {name = "Mykola Golub",   email = "mykola.golub@clyso.com"},
  {name = "Sandy Kaur",     email = "sandy.kaur@ibm.com"},
  {name = "Ernesto Puerta", email = "epuertat@redhat.com"},
  {name = "Yin Congmin",    email = "congmin.yin@intel.com"},
  {name = "Scott Peterson", email = "scott.d.peterson@intel.com"},
  {name = "Jason Dillaman", email = "dillaman@redhat.com"},
  {name = "Anita Shekar",   email = "anita.shekar@ibm.com"},
]
maintainers = []
keywords = []
classifiers = [] # https://pypi.org/classifiers/
dependencies = [
    "grpcio ~= 1.53.0",
    "grpcio_tools ~= 1.53.0",
    "pytest>=7.4.0",
]

[tool.pdm.scripts]
protoc = {call = "grpc_tools.command:build_package_protos('proto')"}

[project.urls]
#homepage = ""
# documentation = ""
repository = "https://github.com/ceph/ceph-nvmeof.git"
# changelog = ""
